--- a/css/style.css
+++ b/css/style.css
@@ -195,8 +195,8 @@ header{
 .carousel-btn{
     position: absolute;
     padding-bottom: 0;
-    transform: translateY(-250%);
-    left: 80%;
+    align-items: baseline;
+    transform: translate(480%,-250%);
 }
 .carousel-btn-hide{
     display: none;
