--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,9 @@ header{
 }
 .carousel-btn-action{
     display: flex;
-    align-items: flex-end;
+    width: 100%;
+    justify-content: space-between;
+    /* align-items: flex-end; */
 }
 .carousel-btn-action button{
     background-color: #33404E;
@@ -197,33 +199,12 @@ header{
 .carousel-btn{
     position: absolute;
     padding-bottom: 0;
-    transform: translate(480%,-250%);
+    transform: translate(40%,-250%);
 }
 .carousel-btn-hide{
     display: none;
 }
-/* Carousel Nav-bar */
-.carousel-nav{
-    display: flex;
-    justify-content: center;
-    transform: translateY(-250%);
-    padding-bottom: 0;
-    margin-bottom: 0;
-   
-}
-.carousel-indicator{
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin: 0 5px;
-    background: none;
-    padding: 6px;
-    margin-bottom: 0;
-    cursor: pointer;
-}
-.carousel-indicator.current-slide{
-    background: rgb(248, 161, 119);
-    border: none;
-}
+
 /* =================
     SECTION INFO
 ================= */
@@ -335,7 +316,7 @@ header{
         position: absolute;
         padding-bottom: 0;
         transform: translateY(-250%);
-        left: 87%;    
+        /* left: 87%;     */
     }
     .site-title-box{
         cursor: text;
@@ -535,8 +516,7 @@ header{
     .carousel-btn{
         position: absolute;
         padding-bottom: 0;
-        transform: translateY(-250%);
-        left: 90%;        
+        transform: translate(-800%, -1100%);
     }
     .nav{
         background: #2581AA;
